Bug 332518 - Desktop Effects KCM has horizontal scrollbars
Summary: Desktop Effects KCM has horizontal scrollbars
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: compositing (other bugs)
Version First Reported In: git master
Platform: unspecified Linux
: NOR normal
Target Milestone: 5
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/117...
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-24 15:59 UTC by Sebastian Kügler
Modified: 2014-03-26 14:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sebastian Kügler 2014-03-24 15:59:54 UTC
The Desktop Effects KCM shows a horizontal scrollbar at the bottom of the page, right above the Apply, etc. buttons.

Reproducible: Always

Steps to Reproduce:
1. Open systemsettings
2. Click Desktop Effects

Actual Results:  
shows horizontal scrollbars unnecessarily

Expected Results:  
no scrollbar when not needed
Comment 1 Martin Flöser 2014-03-26 14:23:03 UTC
Git commit f9cb5366c3b2cf2ba3854b4b247ce95115d4d885 by Martin Gräßlin.
Committed on 26/03/2014 at 11:06.
Pushed by graesslin into branch 'master'.

Fix the initial size of the KCMs

Both KCMs had a hard coded default which is obviously bad. Instead we
now calculate a useable implicitWidth and implicitHeight and use this
as the minimum size for the KCM. Which means we need also track changes
to these two root object properties and update the QWidget container
accordingly.
Related: bug 332519
REVIEW: 117079

M  +2    -2    main.cpp
M  +9    -0    model.cpp
M  +3    -0    model.h
M  +4    -0    qml/CompositingView.qml
M  +2    -0    qml/EffectView.qml
M  +4    -0    qml/OpenGLErrorView.qml
M  +3    -2    qml/main-compositing.qml
M  +3    -2    qml/main.qml

http://commits.kde.org/kwin-compositing-kcm/f9cb5366c3b2cf2ba3854b4b247ce95115d4d885